--- a/web/src/index.html
+++ b/web/src/index.html
@@ -10,6 +10,9 @@
 <body>
   <!-- Please keep this div empty -->
   <div id="redwood-app"></div>
+  <!-- Cloudinary upload widget -->
+  <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript">
+  </script>
 </body>
 
 </html>
