--- a/web/src/index.html
+++ b/web/src/index.html
@@ -13,6 +13,8 @@
   <!-- Cloudinary upload widget -->
   <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript">
   </script>
+  <!-- Cloudinary media library widget -->
+  <script src="https://media-library.cloudinary.com/global/all.js"></script>
 </body>
 
 </html>
