style: Style (position) google translate select element per layout

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <!-- Google translate -->
   <div class="google_translate" id="google_translate_element"></div>
   <!-- Please keep this div empty -->
   <div id="redwood-app"></div>
